tests/rosetta/out/Dart/checkpoint-synchronization-1.error
run error: exit status 254
../../tests/rosetta/out/Dart/checkpoint-synchronization-1.dart:40:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-1.dart:69:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-1.dart:74:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/checkpoint-synchronization-1.dart:78:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
